rnsc/test_data/integration/error/parser/outside_class_directive/interface_keyword.rns
; some comment
; another comment
interface
.class public HelloWorld
.super java/lang/Object
